// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-mixed-verdict-halt.acceptance given: [journey] exhausted l1 + malfunctioned l3 in one pass when: [t0] round 1/2: l1 rejected, l3 awaits then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: l1-reviewer (l1, 1/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r001._.given.by_peer.l1-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r001._.taken.by_self.l1-reviewer.md
   │
   ├─ r2: l3-reviewer (l3, 0/5)
   │   └─ awaits arrival
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: l1-reviewer (l1, 1/2)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r001._.given.by_peer.l1-reviewer.md
      │   │   └─ taken: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r001._.taken.by_self.l1-reviewer.md
      │   └─ r2: l3-reviewer (l3, 0/5)
      │       └─ awaits l1 terminal
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-mixed-verdict-halt.acceptance given: [journey] exhausted l1 + malfunctioned l3 in one pass when: [t1] round 2/2: l1 rejected, l3 awaits then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: l1-reviewer (l1, 2/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.l1-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.l1-reviewer.md
   │
   ├─ r2: l3-reviewer (l3, 0/5)
   │   └─ awaits arrival
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: l1-reviewer (l1, 2/2)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.l1-reviewer.md
      │   │   └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.l1-reviewer.md
      │   └─ r2: l3-reviewer (l3, 0/5)
      │       └─ awaits l1 terminal
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-mixed-verdict-halt.acceptance given: [journey] exhausted l1 + malfunctioned l3 in one pass when: [t2] round 3/2: l1 exhausted, l3 unlocks + malfunctions then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: l1-reviewer (l1, 2/2)
   │   ├─ exhausted 🌙, cached
   │   ├─ terminal — does not block higher levels
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.l1-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.l1-reviewer.md
   │
   ├─ r2: l3-reviewer (l3, 1/5)
   │   ├─ malfunction 💥
   │   ├─ terminal — does not block higher levels
   │   ├─ given: .reviews/peer/1.execute._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.l3-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.l3-reviewer.md
   │
   └─ halted: peer reviewer budget exhausted

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = malfunction
   ├─ reason = reviewer or judge malfunctioned; peer reviewer budget exhausted: l1-reviewer
   ├─ options
   │  ├─ overrule the malfunction
   │  │  └─ rhx route.stone.set --stone 1.execute --as overruled
   │  ├─ increase budget
   │  │  └─ rhx route.guard.budget --for review --add N --peer l1-reviewer --stone 1.execute
   │  └─ approve as-is
   │     └─ rhx route.stone.set --stone 1.execute --as approved
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      └─ reviews
          ├─ r1: l1-reviewer (l1, 2/2)
          │   ├─ exhausted 🌙, cached
          │   ├─ terminal — does not block higher levels
          │   ├─ 1 blocker 🔴
          │   ├─ 0 nitpicks ✓
          │   ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.l1-reviewer.md
          │   └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.l1-reviewer.md
          └─ r2: l3-reviewer (l3, 0/5)
              ├─ malfunction 💥
              ├─ terminal — does not block higher levels
              ├─ given: .reviews/peer/1.execute._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.l3-reviewer.md
              └─ taken: .reviews/peer/1.execute._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.l3-reviewer.md
"
`;
